# blueman

./: CHANGELOG.md  Makefile.am  configure.ac  meson.build  meson_options.txt
apps/: blueman-adapters  blueman-adapters.in  blueman-applet  blueman-applet.in  blueman-assistant  blueman-assistant.in  blueman-manager  blueman-manager.in  blueman-mechanism  blueman-mechanism.in  blueman-sendto.in  blueman-services.in  blueman-tray.in
blueman/: Constants.py.in  Functions.py  Makefile.am  Service.py  bluez.py  obex.py
blueman/bluez/: Adapter.py  AgentManager.py  Base.py  Device.py  Headset.py  Manager.py  Network.py  PropertiesBase.py  errors.py
blueman/bluez/obex/: AgentManager.py  Client.py  Manager.py  Transfer.py
blueman/gui/: DeviceList.py  DeviceSelectorDialog.py  DeviceSelectorList.py  DeviceSelectorWidget.py  GenericList.py  GtkAnimation.py  Makefile.am  NstBluetooth.py
blueman/gui/applet/: PluginDialog.py
blueman/gui/dialogs/: Adapters.py  Makefile.am
blueman/gui/manager/: ManagerDeviceList.py  ManagerDeviceMenu.py  ManagerMenu.py  ManagerProgressbar.py  (+1 more)
blueman/main/: Adapter.py  Applet.py  Builder.py  DBusProxies.py  DBusServiceObject.py  DbusService.py  Makefile.am  Manager.py  MechanismApplication.py  NetConf.py  NetworkManager.py  PluginManager.py  Sendto.py  Services.py  Tray.py
blueman/plugins/: AppletPlugin.py
blueman/services/: Functions.py
data/: Makefile.am  blueman.css  org.blueman.gschema.xml
data/ui/: manager-main.ui
po/: POTFILES.in  blueman.pot
sendto/: Makefile.am  caja-bluetooth-sendto.c  caja-sendto-plugin.h
(+28 files in other folders)
